# Tokumeika

./: .buildinfo  .gitignore  README.dev.md  README.md  anonymize.html  data.html  export.html  genindex.html  index.html  objects.inv  package.json  package.py  search.html  searchindex.js  setup.html
.github/workflows/: api-tests.yml  electron-package.yml  gh-pages.yml
_static/: documentation_options.js
api/: api_server.py  api_server.spec  requirements.txt
api/api/: .gitignore  api.py  config_loader.py  namedb.py  utils.py
api/api/config/: config.toml  items.csv  tags.toml
api/api/tests/: test_api.py
docs/source/: anonymize.rst  conf.py  data.rst  export.rst  index.rst  setup.rst
docs/source/vpn/: vpn.rst
electron/: README.md  main.js  package-lock.json  package.json  preload.js
public/: index.html  manifest.json
src/: App.css  App.tsx  Browser.tsx  Exporter.tsx  SortableTable.tsx
src/anonymizer/: Anonymizer.tsx  CheckList.tsx  CheckNames.tsx  CustomizedDialog.tsx  Dcm.tsx  DeleteDialog.tsx  Execute.tsx  GetList.tsx  MetaDialog.tsx  StyledTable.tsx
tools/: exportフォルダのタグを削除.bat  privateフォルダのタグを削除.bat
tools/reremove/: Cargo.toml
tools/reremove/src/: main.rs
utils/stats/: .gitignore  Makefile  README.md  collect.py  gen_html.py  gen_list.py  requirements.txt
utils/stats/templates/: datalist.html  stats.html
vpn/: vpn.html
