[package]
name = "reremove"
version = "0.1.0"
edition = "2021"

authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
description = "Remove tags from dicom files. By default, remove tags in `EXE/config/tags.toml` will be deleted from zipped dicom files in `EXE/export`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
dicom = { version = "0.6.1", features = [] }
env_logger = "0.10.0"
glob = "0.3.1"
indexmap = "2.0.2"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"
zip = "0.6.6"
